log/build_2024-06-26_15-00-06/my_package/stderr.log
  File "/home/suho/final/install/my_package/lib/python3.8/site-packages/my_package/control_node.py", line 27
    
    ^
SyntaxError: unexpected EOF while parsing

